--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>1.1</h3>
+    
     <table border="1" width="500">
         <tr>
             <td>1</td>
@@ -25,7 +25,7 @@
         </tr>
     </table>
 
-    <h3>1.2</h3>
+    
     <table border="1" width="500">
         <tr>
             <td colspan="3" align="center">1</td>
@@ -48,7 +48,7 @@
         </tr>
     </table>
 
-    <h3>1.3</h3>
+   <!-- <h3>1.3</h3>
 
     <table border="1" width="500">
         <tr>
@@ -75,6 +75,6 @@
             <td colspan="4">13</td>
             <td>14</td>
         </tr>
-    </table>
+    </table> -->
 </body>
 </html>
