--- a/2.html
+++ b/2.html
@@ -19,13 +19,13 @@
     </figure>
     
     
-    <audio src="Nell.mp3" controls preload></audio> <br/>
+   <!-- <audio src="Nell.mp3" controls preload></audio> <br/>
     <video src="video.mp4"
     poster="poster.jpg"
     width="400" height="300"
     preload
     controls
-    loop></video>
+    loop></video>-->
 
     <br/><hr/>
     <h3>Виды пород</h3>
